--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "test": "vitest"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
